# horcrux

./: Cargo.toml  README.md
.github/workflows/: benches.yml  build.yml  format.yml  lints.yml  tests.yml
examples/: lagrange.rs  plot.rs
horcrux/: Cargo.toml
horcrux/src/: field.rs  gf2n.rs  lib.rs  shamir.rs
sage/: gf2irreducible.out  gf2irreducible.sage
src/: main.rs  mnemonic.rs
